--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "clsx": "^2.1.1",
     "cookies-next": "^4.2.1",
     "embla-carousel-react": "^8.1.7",
+    "framer-motion": "^11.3.30",
     "lucide-react": "^0.408.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.5",
     "next-intl": "^3.17.4",
     "next-themes": "^0.3.0",
@@ -35,7 +37,7 @@
     "react-responsive": "^10.0.0",
     "sonner": "^1.5.0",
     "swiper": "^11.1.5",
-    "tailwind-merge": "^2.4.0",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
