--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@tabler/icons-react": "^3.13.0",
     "@types/swiper": "^6.0.0",
     "@vercel/analytics": "^1.3.1",
     "class-variance-authority": "^0.7.0",
