--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-icons": "^5.3.0",
     "react-multi-carousel": "^2.8.5",
     "react-responsive": "^10.0.0",
+    "sharp": "^0.33.5",
     "sonner": "^1.5.0",
     "swiper": "^11.1.5",
     "tailwind-merge": "^2.5.2",
